--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,6 @@
         <module>charpter5</module>
         <module>charpter6</module>
         <module>charpter7</module>
+        <module>charpter8</module>
     </modules>
 </project>
